fixed CSS problem, background of dropdown didn't follow overflowing values

--- a/src/sass/paper-dropdown-input.scss
+++ b/src/sass/paper-dropdown-input.scss
@@ -38,6 +38,7 @@ paper-material {
   &[opened] {
     opacity: 1;
   }
+  background-color: white;
 }
 
 iron-icon {
